tests/files/parser_tests/should_fail/042.cmdr
//Should not parse due to multiple commands
echo "hello" & git clone "myurl.com";
